--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -4,11 +4,13 @@
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
       <div class="col-md-5 mt-5 mt-md-0">
-        <h1 class="display-5">Is your business struggling to achieve its' goals and to energize your
+        <h1 class="display-5 mb-2">Is your business/organization struggling to achieve its' goals and to energize your
           team?</h1>
-        <p class="mt-3">At ESPeople, we energize and synergize people. We integrate your teams' full collective
-          potentials and optimize your management & leadership towards mission accomplishments</p>
-        <em>Thus we are ESPeople Trainingsmiths</em>
+          <em>At ESPeople, we energize and synergize your teams to achieve tactical and strategic goals through collaborative efforts.</em>
+          <p class="mt-3">We integrate your teams full collective potentials and optimize your management & leadership capabilities towards mission accomplishments</p>
+        <!-- <p class="mt-3">At ESPeople, we energize and synergize people. We integrate your teams' full collective
+          potentials and optimize your management & leadership towards mission accomplishments</p> -->
+        <em>Thus we are ESPeople Trainingsmiths</em> 
         <div class="btn-row mt-4 d-none">
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ourApproach">Know
             us</button>
@@ -63,9 +65,9 @@
     <div class="row align-items-center justify-content-around">
       <!-- Left Section (Text) -->
 
-      <div class="col-md-4">
+      <div class="col-md-4 text-center text-md-start">
         <h1 class="text-primary display-5 mb-3">Our Beneficiaries</h1>
-        <h4 class="sub-title">Whom we empower with our ESP learning solutions?</h4>
+        <h4 class="sub-title"><em>Whom we empower with our ESP learning solutions</em>....</h4>
       </div>
 
       <!-- Right Section (Cards) -->
@@ -125,7 +127,7 @@
           </p>
           <div class="d-flex gap-3 align-items-center">
             <a href="/clientele-beneficiaries/business" class="btn btn-primary">Know More</a>
-            <a href="" class="btn btn-primary-outline">Video</a>
+            <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
         </div>
         <div class="col-md-6 order-first">
@@ -147,15 +149,12 @@
           <h3 class="industry-title mt-3 mt-md-0">ESP Non-Profit</h3>
           <hr>
           <h4>Learning Solutions</h4>
-          <p><em>Our learning solutions are different, unique & transformative for non profits.</em> <br><br> Their
-            service dream to beneficiaries is the epitome in our solutions. Their cause & crusade, high degree of
-            resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejection
-            environs, constantly networking for volunteers to support social cause etc, are configured as prime important in our learning solutions
+          <p><em>Our learning solutions are different, unique & transformative for non profits.</em> <br><br> Their service dream to beneficiaries is the epitome in our solutions. Their cause & crusade, high degree of resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejection environs, constantly networking for volunteers to support social cause etc, are configured as prime important in our learning solutions.
           </p>
-          <em></em>
+          <strong><em>ESPeople indulgence are aimed at achieving non-profits immediate desired outcomes & long term impacts through their projects and programs to their community.</em></strong>
           <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/ngo" class="btn btn-primary">Know more</a>
-            <a href="" class="btn btn-primary-outline">Video</a>
+            <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
         </div>
       </div>
@@ -181,7 +180,7 @@
           <p>Thus, ESPeople develop the next generation of youth for tomorrow's nation.</p>
           <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/education" class="btn btn-primary">Know more</a>
-            <a href="" class="btn btn-primary-outline">Video</a>
+            <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
         </div>
       </div>
@@ -200,15 +199,14 @@
           <hr>
           <h4>Learning Solutions</h4>
           <p><em>
-            We align & train government teams to work towards efficient, transparent, good governance for impactful
-              public service in the process of nation building
+            We align & train government teams to work towards efficient, transparent, good governance for impactful public service in the process of nation building.
           </em></p>
-          <p>We can also join hands with the governance team to successfully create awareness, alignment with various
-            stack holders and public in connection with various programs & projects government sets as a priority goals
-            for nations growth & development</p>
+          <p>Besides we can join hands with the governance team to successfully create awareness, alignment with various stack holders and public in connection with various programs & projects government sets as a priority goals for nations growth & development</p>
+
+          <strong><em>ESPeople efforts are invested through its learning solutions for nations priority growth & developmental road map</em></strong>
           <div class="d-flex gap-3 align-items-center justify-content-around justify-content-md-start ">
             <a href="/clientele-beneficiaries/government-organizations" class="btn btn-primary">Know more</a>
-            <a href="" class="btn btn-primary-outline">Video</a>
+            <a href="" class="btn btn-primary-outline">Watch Video</a>
           </div>
         </div>
       </div>
@@ -225,11 +223,7 @@
       <div class="evolution-section col-md-5 me-auto" data-aos="fade-right">
         <h1 class="display-5 mb-3">The Evolution of ESPeople</h1>
         <p class="evolution">
-          Every great organisation starts with a dream—a vision for achieving excellence.
-          But to turn that vision into reality, you need the right people who have the energy
-          and ability to make things happen. That's where ESPeople come in. We partner with
-          organisations to develop and empower their teams, helping them turn their original
-          dream into reality and inspire new heights of success.
+          Every great organisation starts with a dream—a vision for achieving excellence. But to turn that vision into reality, you need the right people who have the energy and ability to make things happen. That's where ESPeople come in. We partner with organisations to develop and empower their teams, helping them turn their original dream into reality and inspire new heights of success
         </p>
         <!-- <a href="#about-us" class="btn btn-dark mt-4">About us</a> -->
       </div>
@@ -248,9 +242,9 @@
           <strong>Be a best training service provider in enabling people</strong>
         </p>
         <ul>
-          <li>To maximize their energy &</li>
-          <li>To effectively employ it in synergy with their team</li>
-          <li>Towards attaining organizational goals achievement</li>
+          <li>to maximize their energy &</li>
+          <li>to effectively employ it in synergy with their team</li>
+          <li>towards organizational goals achievement</li>
         </ul>
       </div>
     <!-- </div> -->
@@ -268,8 +262,8 @@
       <!-- Card 1: Our core belief -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="neumorphic-card">
-          <img src="/images/tyndal-effect.jpeg" alt="Philosophy img">
           <h4 class="mt-3">Our Core Belief</h4>
+          <img src="/images/tyndal-effect.jpeg" alt="Philosophy img">
           <p class="mt-3">Love people for who they are instead of judging them for what they are not....<br> <br>Essence
             is, accept people as they are! <br><br> Bridge the gap in required knowledge, skills, and practices which
             are appropriate to their aspirational growth goals</p>
@@ -279,8 +273,8 @@
       <!-- Card 2: ESP Learning Model -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="neumorphic-card">
-          <img src="/images/learning-model.png" alt="learning model">
           <h4 class="mt-3">The ESP Learning Model</h4>
+          <img src="/images/learning-model.png" alt="learning model">
           <ul>
             <li><strong>Awareness</strong> – Learning begins with creating a sense of awareness about the situation.
             </li>
@@ -298,11 +292,11 @@
       <!-- card 3: What we deliver -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class=" neumorphic-card">
-          <img src="/images/what-we-deliver.png" alt="what we deliver">
           <h4 class="mt-3">What we deliver</h4>
+          <img src="/images/what-we-deliver.png" alt="what we deliver">
           <p class="text-center text-md-start"><strong>We simply ENERGIZE your people capabilities & then SYNERGIZE them
               with their core team for high performance</strong></p>
-          <em>"Thus we are ESPeople Trainingsmiths"</em>
+          <strong><em>"Thus we are ESPeople Trainingsmiths"</em></strong>
 
         </div>
       </div>
