--- a/themes/growth-sketch/layouts/partials/menu.html
+++ b/themes/growth-sketch/layouts/partials/menu.html
@@ -12,9 +12,12 @@ Renders a menu for the given menu ID.
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top p-0">
   <div class="container">
-    <a class="navbar-brand p-0" href="/">
+    <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0" href="/">
       <img src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
-      <span class="font-weight-bold h4">ESPeople</span>
+      <div>
+        <p class="font-weight-bold h4 mb-0">ESPeople</p>
+        <em>TrainingSmiths</em>
+      </div>
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
