--- a/themes/growth-sketch/layouts/partials/footer.html
+++ b/themes/growth-sketch/layouts/partials/footer.html
@@ -20,7 +20,7 @@
         </div>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a class="nav-link" href="/about-ESP">About us</a>
+                <a class="nav-link" href="/about-us">About us</a>
             </li>
     <!-- <li class="nav-item">
         <a class="nav-link" href="#">Blog</a>
